# JPEGENC

.zed/: settings.json
src/: JPEGENC.c  JPEGENC.h  jpegenc.inl
windows/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test.c  test_bmp2jpg.py
